// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UiBadge props works correctly with default props 1`] = `
<span
  class="ui-badge ui-badge_default ui-badge_medium"
>
  
  

</span>
`;

exports[`UiBadge style should display correct class with different variants and sizes 1`] = `
<span
  class="ui-badge ui-badge_default ui-badge_medium"
>
  
  

</span>
`;

exports[`UiBadge style should display correct class with different variants and sizes 2`] = `
<span
  class="ui-badge ui-badge_default ui-badge_small"
>
  
  

</span>
`;

exports[`UiBadge style should display correct class with different variants and sizes 3`] = `
<span
  class="ui-badge ui-badge_warning ui-badge_medium"
>
  
  

</span>
`;

exports[`UiBadge style should display correct class with different variants and sizes 4`] = `
<span
  class="ui-badge ui-badge_warning ui-badge_small"
>
  
  

</span>
`;

exports[`UiBadge style should display correct class with different variants and sizes 5`] = `
<span
  class="ui-badge ui-badge_danger ui-badge_medium"
>
  
  

</span>
`;

exports[`UiBadge style should display correct class with different variants and sizes 6`] = `
<span
  class="ui-badge ui-badge_danger ui-badge_small"
>
  
  

</span>
`;

exports[`UiBadge style should display correct class with different variants and sizes 7`] = `
<span
  class="ui-badge ui-badge_success ui-badge_medium"
>
  
  

</span>
`;

exports[`UiBadge style should display correct class with different variants and sizes 8`] = `
<span
  class="ui-badge ui-badge_success ui-badge_small"
>
  
  

</span>
`;

exports[`UiBadge style should display correct class with different variants and sizes 9`] = `
<span
  class="ui-badge ui-badge_info ui-badge_medium"
>
  
  

</span>
`;

exports[`UiBadge style should display correct class with different variants and sizes 10`] = `
<span
  class="ui-badge ui-badge_info ui-badge_small"
>
  
  

</span>
`;
